fixed 1 手机应用表添加字段-小程序编码 2 增加小程序跳转链接记录表 3 获取小程序跳转链接接口

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -54,3 +54,7 @@ wx:
 academic:
   year_one_start: 9-1
   year_two_start: 2-1
+xcx:
+  expire_time: 86400
+  auth_prefix: f1e13ece5c436eba6c98
+  request_url: https://dc.njzhzx.net/api/api/app/getUrlScheme/{code}/{module}
