--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -47,6 +47,7 @@ wx:
   message_secret: Ir15A6_SrSYpw565YjJoEKFISSvZvQjR3W257aXEZkk   #家校应用
   bench_secret: pPQDoVyVoLK9QfOmGN497bFHnDQA0TB2mZbwaXh8Yrs
   total_duty_secret: Vypgiw6feMdR06Nz_vhXRzEw0iNq4C9y3Tzved0BPNk
+  oauth_secret: Pm2EhhvOCVNieiB-6j310k1DPlGaUPUDcP3pbqsgrBM
   agentId: 1000049
   resp:
     token: j4byZpKL3VMZXC4IcsQClIfcuvf
