--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -15,6 +15,18 @@ spring:
       jdbc-url: jdbc:sqlserver://10.100.10.111:1433;DatabaseName=AsiaCardserver
       username: EKT
       password: 1qaz!QAZ
+  redis:
+    host: localhost
+    database: 1
+    port: 6379
+    password:
+    timeout: 10000
+    lettuce:
+      pool:
+        max-active: 20
+        max-idle: 10
+        min-idle: 5
+        max-wait: 5000
   resources:
     static-locations: classpath:static/templates/
 #mybatis-plus:
