--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -8,18 +8,18 @@ spring:
     name: server-dev
   datasource:
     mysql:
-      jdbc-url: jdbc:mysql://42.192.95.9:3306/zhzx?serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&useSSL=false&allowMultiQueries=true
+      jdbc-url: jdbc:mysql://localhost:3306/zhzx?serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&useSSL=false&allowMultiQueries=true
       username: root
-      password: XwdTestDB
+      password: 123456
     mssql:
       jdbc-url: jdbc:sqlserver://10.100.10.111:1433;DatabaseName=AsiaCardserver
       username: EKT
       password: 1qaz!QAZ
   redis:
-    host: localhost
+    host: 47.96.107.184
     database: 1
     port: 6379
-    password:
+    password: chenghe666666
     timeout: 10000
     lettuce:
       pool:
