--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,23 @@
             <artifactId>hutool-all</artifactId>
             <version>5.7.12</version>
         </dependency>
+        <dependency>
+            <groupId>commons-httpclient</groupId>
+            <artifactId>commons-httpclient</artifactId>
+            <version>3.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.2</version> <!-- 或者其他版本号 -->
+        </dependency>
+
     </dependencies>
 
     <build>
