--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -8,7 +8,7 @@ spring:
     name: server-dev
   datasource:
     mysql:
-      jdbc-url: jdbc:mysql://47.96.107.184:3306/zhzx_prod?serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&useSSL=false&allowMultiQueries=true
+      jdbc-url: jdbc:mysql://47.96.107.184:3306/zhzx-prod?serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&useSSL=false&allowMultiQueries=true
       username: zxax
       password: zxxb@yy330
     mssql:
